[package]
name = "gits"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
tempfile = "3.10"
anyhow = "1.0"
inquire = "0.7"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
which = "6.0"
